Prevent popping up keyboard over input on mobile

--- a/style.css
+++ b/style.css
@@ -112,8 +112,10 @@ main > section {
 
 .title-wrapper {
     display: flex;
+    width: 100%;
     gap: 25px;
     align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
@@ -202,6 +204,7 @@ p {
 }
 
 #current-date {
+    flex: 1;
     background: white;
     color: black;
     padding: 10px;
